Add comprehensive Javadoc and formatting improvements across multiple files.  Refactor ValueSetIdentifier to implement Namespace.