@@ -1,10 +1,13 @@
 package org.clinicalontology.terminology.api.model;
 
+import org.apache.commons.collections4.ListUtils;
 import org.apache.commons.lang3.Validate;
 
 import java.lang.reflect.Field;
 import java.lang.reflect.Modifier;
-import java.util.*;
+import java.util.LinkedHashMap;
+import java.util.List;
+import java.util.Map;
 
 /**
  * Helper class that emulates a Java enum where a native enum is not practical.  It works by scanning the specified
@@ -21,12 +24,25 @@ public class CodeSystemEnumerator<T> {
 
     private final List<T> values;
 
+    /**
+     * Create a new enumerator where the enum class and member type are the same.
+     *
+     * @param memberType The type of members.
+     */
     public CodeSystemEnumerator(Class<T> memberType) {
         this(memberType, memberType);
     }
 
-    @SuppressWarnings("unchecked")
-    public CodeSystemEnumerator(Class<?> pseudoEnumClass, Class<T> memberType) {
+    /**
+     * Create a new enumerator.
+     *
+     * @param pseudoEnumClass The class that contains the members.
+     * @param memberType      The type of members.
+     */
+    public CodeSystemEnumerator(
+        Class<?> pseudoEnumClass,
+        Class<T> memberType
+    ) {
         for (Field member : pseudoEnumClass.getDeclaredFields()) {
             try {
                 member.setAccessible(true);
@@ -36,7 +52,7 @@ public class CodeSystemEnumerator<T> {
                     Object value = member.get(null);
 
                     if (memberType.isInstance(value)) {
-                        members.put(member.getName(), (T) value);
+                        members.put(member.getName(), memberType.cast(value));
                     }
                 }
             } catch (Exception e) {
@@ -44,44 +60,85 @@ public class CodeSystemEnumerator<T> {
             }
         }
 
-        names = Collections.unmodifiableList(new ArrayList<>(members.keySet()));
-        values = Collections.unmodifiableList(new ArrayList<>(members.values()));
+        names = List.copyOf(members.keySet());
+        values = List.copyOf(members.values());
     }
 
+    /**
+     * Returns the member names.
+     *
+     * @return The member names.
+     */
     public List<String> names() {
         return names;
     }
 
+    /**
+     * Returns the member values.
+     *
+     * @return The member values.
+     */
     public List<T> values() {
         return values;
     }
 
-    public T valueOf(String key, boolean exceptionIfNotFound) {
-        T value = members.get(key);
-        Validate.isTrue(value != null || !exceptionIfNotFound, "No member named %s was found.", key);
+    /**
+     * Returns the member with the specified name.
+     *
+     * @param name                The member name.
+     * @param exceptionIfNotFound If true, an exception is thrown if the member is not found.
+     * @return The member with the specified name (possibly null).
+     */
+    public T valueOf(
+        String name,
+        boolean exceptionIfNotFound
+    ) {
+        T value = members.get(name);
+        Validate.isTrue(value != null || !exceptionIfNotFound, "No member named %s was found.", name);
         return value;
     }
 
+    /**
+     * Returns the member with the specified name.  An exception is thrown if the member is not found.
+     *
+     * @param name The member name.
+     * @return The member with the specified name (never null).
+     */
     public T valueOf(String name) {
         return valueOf(name, true);
     }
 
+    /**
+     * Returns the ordinal of the specified member name.  If the member is not found, an exception is thrown.
+     *
+     * @param name The member name.
+     * @return The ordinal of the specified member name.
+     */
     public int ordinal(String name) {
-        return names.indexOf(name);
+        int ordinal = names.indexOf(name);
+        Validate.isTrue(ordinal != -1, "No member named %s was found.", name);
+        return ordinal;
     }
 
+    /**
+     * Returns the ordinal of the specified member.  If the member is not found, an exception is thrown.
+     *
+     * @param member The member.
+     * @return The ordinal of the specified member.
+     */
     public int ordinal(T member) {
-        for (int i = 0; i < values.size(); i++) {
-            if (values.get(i) == member) {
-                return i;
-            }
-        }
-
-        return -1;
+        int ordinal = ListUtils.indexOf(values, value -> value == member);
+        Validate.isTrue(ordinal != -1, "%s is not a member.", member.toString());
+        return ordinal;
     }
 
+    /**
+     * Returns the name of the specified member.  If the member is not found, an exception is thrown.
+     *
+     * @param member The member.
+     * @return The name of the specified member.
+     */
     public String name(T member) {
-        int i = ordinal(member);
-        return i == -1 ? null : names.get(i);
+        return names.get(ordinal(member));
     }
 }
