@@ -12,18 +12,10 @@ import java.util.stream.Collectors;
  */
 public interface TerminologyService {
 
-    //--------------- Concepts ---------------
-
-    /**
-     * @param concept The concept whose existence in the terminology repository we are determining.
-     * @return True if the concept exists in the given terminology repository. False otherwise.
-     */
-    boolean isValidConcept(Concept concept);
-
     //--------------- Terminology Mappings ---------------
 
     /**
-     * Method returns all concept mappings that involve this concept as the source of the mapping.
+     * Returns all concept mappings that involve this concept as the source of the mapping.
      *
      * @param source The concept that is at the source of the mapping (RHS).
      * @return The set of mappings having the concept at the source of the mapping.
@@ -31,7 +23,7 @@ public interface TerminologyService {
     TerminologyMappings getMappingsForConcept(Concept source);
 
     /**
-     * Method returns all concept mappings within the specified category that involve this concept as
+     * Returns all concept mappings within the specified category that involve this concept as
      * the source of the mapping.
      *
      * @param source   The concept that is at the source of the mapping (RHS).
@@ -44,7 +36,7 @@ public interface TerminologyService {
     );
 
     /**
-     * Method returns all concept mappings from the source concept and target concepts within the specified
+     * Returns all concept mappings from the source concept and target concepts within the specified
      * code system.
      *
      * @param source           The concept that is at the source of the mapping (RHS).
@@ -59,13 +51,15 @@ public interface TerminologyService {
     //--------------- Value Sets ---------------
 
     /**
+     * Returns true if the value set exists in the given terminology repository. False otherwise.
+     *
      * @param valueSetIdentifier The value set whose existence in the terminology repository we are determining.
      * @return True if the value set exists in the given terminology repository. False otherwise.
      */
     boolean isValidValueSet(ValueSetIdentifier valueSetIdentifier);
 
     /**
-     * Method tests whether a concept reference is an element of a value set.
+     * Tests whether a concept reference is an element of a value set.
      *
      * @param valueSetIdentifier A value set identifier.
      * @param concept            The concept whose inclusion in a value set we are verifying.
@@ -77,12 +71,16 @@ public interface TerminologyService {
     );
 
     /**
+     * Returns the expansion of the given value set.
+     *
      * @param valueSetIdentifier The identifier of the value set whose expansion we are requesting.
      * @return The expansion for the given value set.
      */
     ValueSetExpansion getValueSetExpansion(ValueSetIdentifier valueSetIdentifier);
 
     /**
+     * Returns the expansion of the given value set as a string.
+     *
      * @param valueSetIdentifier The identifier of the value set whose expansion we are requesting.
      * @return A list of concepts in the form codeSystem|code(,codeSystem|code)*
      */
@@ -93,7 +91,15 @@ public interface TerminologyService {
     //--------------- Concepts ---------------
 
     /**
-     * Returns a fully hydrated concept from the concept store.  If one is not available,
+     * Returns true if the concept exists in the given terminology repository. False otherwise.
+     *
+     * @param concept The concept whose existence in the terminology repository we are determining.
+     * @return True if the concept exists in the given terminology repository. False otherwise.
+     */
+    boolean isValidConcept(Concept concept);
+
+    /**
+     * Returns a fully hydrated concept from the concept store.  If one is not available
      * should return a minimal concept with the given code system and code.
      *
      * @param codeSystem The code system.
@@ -114,6 +120,8 @@ public interface TerminologyService {
     }
 
     /**
+     * Returns the set of descriptions associated with the concept in the default language.
+     *
      * @param concept The concept whose descriptions are sought.
      * @return The set of descriptions associated with the concept in the default language.
      */
@@ -122,6 +130,8 @@ public interface TerminologyService {
     }
 
     /**
+     * Returns the set of descriptions associated with the concept in the specified language.
+     *
      * @param concept  The concept whose descriptions are sought.
      * @param language The desired language.
      * @return The set of descriptions associated with the concept in the specified language.
@@ -136,6 +146,8 @@ public interface TerminologyService {
     }
 
     /**
+     * Returns the set of descriptions associated with the concept in the specified language.
+     *
      * @param concept         The concept whose descriptions are sought.
      * @param descriptionType The description type.
      * @return The set of descriptions associated with the concept in the specified language.
@@ -148,6 +160,8 @@ public interface TerminologyService {
     }
 
     /**
+     * Returns the set of descriptions associated with the concept in the specified language.
+     *
      * @param concept         The concept whose descriptions are sought.
      * @param descriptionType The description type.
      * @param language        The desired language.
@@ -164,6 +178,8 @@ public interface TerminologyService {
     }
 
     /**
+     * Returns all descriptions of the given type.
+     *
      * @param concept         The concept.
      * @param descriptionType The description type.
      * @return All descriptions of the given type.
@@ -176,6 +192,8 @@ public interface TerminologyService {
     }
 
     /**
+     * Returns all descriptions of the given type.
+     *
      * @param concept         The concept.
      * @param descriptionType The description type.
      * @param language        The language
@@ -190,6 +208,8 @@ public interface TerminologyService {
     }
 
     /**
+     * Returns the fully specified name for the concept.
+     *
      * @param concept The concept whose fully specified name is desired.
      * @return The fully specified name for the concept.
      */
@@ -198,6 +218,8 @@ public interface TerminologyService {
     }
 
     /**
+     * Returns the synonyms for the concept.
+     *
      * @param concept The concept whose fully specified name is desired.
      * @return The synonyms for the concept.
      */
@@ -206,6 +228,8 @@ public interface TerminologyService {
     }
 
     /**
+     * Returns the synonyms for the concept.
+     *
      * @param concept  The concept whose fully specified name is desired.
      * @param language The language.
      * @return The synonyms for the concept.
@@ -218,6 +242,8 @@ public interface TerminologyService {
     }
 
     /**
+     * Returns the definition for the concept.
+     *
      * @param concept The concept whose fully specified name is desired.
      * @return The definition for the concept.
      */
@@ -226,6 +252,8 @@ public interface TerminologyService {
     }
 
     /**
+     * Returns the definition for the concept.
+     *
      * @param concept  The concept whose fully specified name is desired.
      * @param language The language.
      * @return The definition for the concept.
@@ -238,10 +266,10 @@ public interface TerminologyService {
     }
 
     /**
-     * Method supports registration of user-defined value sets
+     * Supports registration of user-defined value sets
      *
      * @param valueSetExpansion The value set expansion to register manually.
-     * @param allowOverrides    If true, value set with override existing entry with the same value set identifier.
+     * @param allowOverrides    If true, the value set will override an existing entry with the same value set identifier.
      */
     void registerExternalValueSet(ValueSetExpansion valueSetExpansion, boolean allowOverrides);
 
@@ -251,13 +279,26 @@ public interface TerminologyService {
     default void refresh() {
     }
 
+    /**
+     * Returns a list of descriptions as text.
+     *
+     * @param descriptions The descriptions.
+     * @return A list of descriptions as text.
+     */
     private static List<String> descriptionsAsText(Collection<ConceptDescription> descriptions) {
         return descriptions.stream()
             .map(ConceptDescription::getDescription)
             .toList();
     }
 
+    /**
+     * Returns the first element of a list or null if the list is empty or null.
+     *
+     * @param list The list.
+     * @param <T>  The type of the list elements.
+     * @return The first element of the list, or null if the list is empty or null.
+     */
     private static <T> T getFirst(List<T> list) {
-        return list == null || list.isEmpty() ? null : list.get(0);
+        return list == null || list.isEmpty() ? null : list.getFirst();
     }
 }
